Wrong local URL handling
Signed-off-by: clinique <gael@lhopital.org>